#
# This file is part of xBaK.
#
# xBaK is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# xBaK is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with xBaK.  If not, see <http://www.gnu.org/licenses/>.
#
# Copyright (C) Guido de Jong <guidoj@users.sf.net>
#

noinst_HEADERS = AnimationResource.h \
                 Audio.h \
                 BMP.h \
                 BadgeWidget.h \
                 BasicFile.h \
                 BookResource.h \
                 ButtonWidget.h \
                 Camera.h \
                 Chapter.h \
                 CharacterButtonWidget.h \
                 ChoiceWidget.h \
                 Clock.h \
                 CombatViewWidget.h \
                 CompassWidget.h \
                 ConfigData.h \
                 ConfigFile.h \
                 ConfigResource.h \
                 ContainerWidget.h \
                 Defines.h \
                 Dialog.h \
                 DialogFactory.h \
                 DialogResource.h \
                 DialogWindow.h \
                 Directories.h \
                 EquipmentItemWidget.h \
                 EquipmentWidget.h \
                 Event.h \
                 EventListener.h \
                 Exception.h \
                 FileBuffer.h \
                 FileManager.h \
                 Font.h \
                 FontResource.h \
                 Game.h \
                 GameApplication.h \
                 GameData.h \
                 GameFile.h \
                 GameResource.h \
                 GameState.h \
                 GameViewWidget.h \
                 Geometry.h \
                 GenericObject.h \
                 HotspotWidget.h \
                 Image.h \
                 ImageButtonWidget.h \
                 ImageResource.h \
                 ImageWidget.h \
                 Inventory.h \
                 InventoryItem.h \
                 InventoryItemWidget.h \
                 InventoryWidget.h \
                 LabelResource.h \
                 MapViewWidget.h \
                 MediaToolkit.h \
                 MoviePlayer.h \
                 MovieResource.h \
                 NameResource.h \
                 Null_Audio.h \
                 ObjectResource.h \
                 Observer.h \
                 Orientation.h \
                 Palette.h \
                 PaletteResource.h \
                 PanelWidget.h \
                 Party.h \
                 PartyResource.h \
                 PatternPolygonObject.h \
                 PlayerCharacter.h \
                 Pointer.h \
                 PointerManager.h \
                 PolygonObject.h \
                 PopUpWidget.h \
                 PortraitWidget.h \
                 Position.h \
                 Preferences.h \
                 PreferencesDialogBridge.h \
                 RampResource.h \
                 RatingsWidget.h \
                 RequestResource.h \
                 ResourceArchive.h \
                 ResourceData.h \
                 ResourceFile.h \
                 ResourceIndex.h \
                 ResourceTag.h \
                 SDL_Clock.h \
                 SDL_Toolkit.h \
                 SDL_Video.h \
                 Scene.h \
                 SceneFactory.h \
                 ScreenResource.h \
                 SkillLevelWidget.h \
                 SkillsWidget.h \
                 Sound.h \
                 SoundResource.h \
                 SpriteObject.h \
                 Statistics.h \
                 Subject.h \
                 TableResource.h \
                 TaggedResource.h \
                 TaggedImageResource.h \
                 TestApplication.h \
                 Text.h \
                 TextButtonWidget.h \
                 TextWidget.h \
                 TileDataResource.h \
                 TileWorldResource.h \
                 Vertex.h \
                 Video.h \
                 Widget.h \
                 WidgetFactory.h \
                 WorldViewWidget.h \
                 Zone.h
noinst_LIBRARIES = libbase.a \
                   libresbase.a \
                   libresdata.a \
                   libresutil.a \
                   libgame.a \
                   libguitoolkit.a \
                   libdriver.a
noinst_PROGRAMS = convertresource \
                  dumpads \
                  dumpbmx \
                  dumpbok \
                  dumpddx \
                  dumpfnt \
                  dumpgam \
                  dumplbl \
                  dumpobj \
                  dumppal \
                  dumpreq \
                  dumpscx \
                  dumpsnd \
                  dumptbl \
                  dumpttm \
                  dumpwld \
                  resourcedemo
bin_PROGRAMS = xbak
libbase_a_SOURCES = BasicFile.cc \
                    BasicFile.h \
                    Event.cc \
                    Event.h \
                    EventListener.h \
                    Exception.cc \
                    Exception.h \
                    FileBuffer.cc \
                    FileBuffer.h \
                    Geometry.cc \
                    Geometry.h \
                    Observer.h \
                    Subject.cc \
                    Subject.h \
                    Vertex.cc \
                    Vertex.h
libgame_a_SOURCES = Camera.cc \
                    Camera.h \
                    Chapter.cc \
                    Chapter.h \
                    ConfigResource.cc \
                    ConfigResource.h \
                    Game.cc \
                    Game.h \
                    GameResource.cc \
                    GameResource.h \
                    GenericObject.cc \
                    GenericObject.h \
                    Inventory.cc \
                    Inventory.h \
                    InventoryItem.cc \
                    InventoryItem.h \
                    Orientation.cc \
                    Orientation.h \
                    Party.cc \
                    Party.h \
                    PatternPolygonObject.cc \
                    PatternPolygonObject.h \
                    PlayerCharacter.cc \
                    PlayerCharacter.h \
                    PolygonObject.cc \
                    PolygonObject.h \
                    Position.cc \
                    Position.h \
                    Preferences.cc \
                    Preferences.h \
                    PreferencesDialogBridge.cc \
                    PreferencesDialogBridge.h \
                    Scene.cc \
                    Scene.h \
                    SceneFactory.cc \
                    SceneFactory.h \
                    SolidPolygonObject.cc \
                    SolidPolygonObject.h \
                    SpriteObject.cc \
                    SpriteObject.h \
                    Statistics.cc \
                    Statistics.h \
                    Zone.cc \
                    Zone.h
libguitoolkit_a_SOURCES = BadgeWidget.cc \
                          BadgeWidget.h \
                          ButtonWidget.cc \
                          ButtonWidget.h \
                          CharacterButtonWidget.cc \
                          CharacterButtonWidget.h \
                          ChoiceWidget.cc \
                          ChoiceWidget.h \
                          CombatViewWidget.cc \
                          CombatViewWidget.h \
                          CompassWidget.cc \
                          CompassWidget.h \
                          ContainerWidget.cc \
                          ContainerWidget.h \
                          Dialog.cc \
                          Dialog.h \
                          DialogFactory.cc \
                          DialogFactory.h \
                          DialogWindow.cc \
                          DialogWindow.h \
                          EquipmentItemWidget.cc \
                          EquipmentItemWidget.h \
                          EquipmentWidget.cc \
                          EquipmentWidget.h \
                          Font.cc \
                          Font.h \
                          GameViewWidget.cc \
                          GameViewWidget.h \
                          HotspotWidget.cc \
                          HotspotWidget.h \
                          Image.cc \
                          Image.h \
                          ImageButtonWidget.cc \
                          ImageButtonWidget.h \
                          ImageWidget.cc \
                          ImageWidget.h \
                          InventoryItemWidget.cc \
                          InventoryItemWidget.h \
                          InventoryWidget.cc \
                          InventoryWidget.h \
                          MapViewWidget.cc \
                          MapViewWidget.h \
                          MoviePlayer.cc \
                          MoviePlayer.h \
                          Palette.cc \
                          Palette.h \
                          PanelWidget.cc \
                          PanelWidget.h \
                          Pointer.cc \
                          Pointer.h \
                          PointerManager.cc \
                          PointerManager.h \
                          PopUpWidget.cc \
                          PopUpWidget.h \
                          PortraitWidget.cc \
                          PortraitWidget.h \
                          RatingsWidget.cc \
                          RatingsWidget.h \
                          SkillLevelWidget.cc \
                          SkillLevelWidget.h \
                          SkillsWidget.cc \
                          SkillsWidget.h \
                          Sound.cc \
                          Sound.h \
                          Text.cc \
                          Text.h \
                          TextButtonWidget.cc \
                          TextButtonWidget.h \
                          TextWidget.cc \
                          TextWidget.h \
                          Widget.cc \
                          Widget.h \
                          WidgetFactory.cc \
                          WidgetFactory.h \
                          WorldViewWidget.cc \
                          WorldViewWidget.h
libresbase_a_SOURCES = ConfigFile.cc \
                       ConfigFile.h \
                       Directories.cc \
                       Directories.h \
                       FileManager.cc \
                       FileManager.h \
                       GameData.h \
                       GameFile.cc \
                       GameFile.h \
                       ResourceArchive.cc \
                       ResourceArchive.h \
                       ResourceData.h \
                       ResourceFile.cc \
                       ResourceFile.h \
                       ResourceIndex.cc \
                       ResourceIndex.h \
                       ResourceTag.cc \
                       ResourceTag.h \
                       TaggedResource.cc \
                       TaggedResource.h
libresdata_a_SOURCES = AnimationResource.cc \
                       AnimationResource.h \
                       BookResource.cc \
                       BookResource.h \
                       DialogResource.cc \
                       DialogResource.h \
                       FontResource.cc \
                       FontResource.h \
                       ImageResource.cc \
                       ImageResource.h \
                       LabelResource.cc \
                       LabelResource.h \
                       MovieResource.cc \
                       MovieResource.h \
                       NameResource.cc \
                       NameResource.h \
                       ObjectResource.cc \
                       ObjectResource.h \
                       PaletteResource.cc \
                       PaletteResource.h \
                       PartyResource.cc \
                       PartyResource.h \
                       RampResource.cc \
                       RampResource.h \
                       RequestResource.cc \
                       RequestResource.h \
                       ScreenResource.cc \
                       ScreenResource.h \
                       SoundResource.cc \
                       SoundResource.h \
                       TableResource.cc \
                       TableResource.h \
                       TaggedImageResource.cc \
                       TaggedImageResource.h \
                       TileDataResource.cc \
                       TileDataResource.h \
                       TileWorldResource.cc \
                       TileWorldResource.h
libresutil_a_SOURCES = BMP.cc \
                       BMP.h
libdriver_a_SOURCES = Audio.h \
                      Clock.h \
                      MediaToolkit.cc \
                      MediaToolkit.h \
                      Null_Audio.cc \
                      Null_Audio.h \
                      SDL_Audio.cc \
                      SDL_Audio.h \
                      SDL_Clock.cc \
                      SDL_Clock.h \
                      SDL_Toolkit.cc \
                      SDL_Toolkit.h \
                      SDL_Video.cc \
                      SDL_Video.h \
                      Video.cc \
                      Video.h
convertresource_SOURCES = convertresource.cc
convertresource_LDADD = libresdata.a \
                        libguitoolkit.a \
                        libresbase.a \
                        libresutil.a \
                        libdriver.a \
                        libbase.a
dumpads_SOURCES = AnimationResource.cc \
                  AnimationResource.h \
                  dumpads.cc
dumpads_LDADD   = libresbase.a \
                  libbase.a
dumpbmx_SOURCES = Image.cc \
                  Image.h \
                  ImageResource.cc \
                  ImageResource.h \
                  TaggedImageResource.cc \
                  TaggedImageResource.h \
                  dumpbmx.cc
dumpbmx_LDADD   = libresbase.a \
                  libdriver.a \
                  libbase.a
dumpbok_SOURCES = BookResource.cc \
                  BookResource.h \
                  dumpbok.cc
dumpbok_LDADD   = libresbase.a \
                  libbase.a
dumpddx_SOURCES = DialogResource.cc \
                  DialogResource.h \
                  dumpddx.cc
dumpddx_LDADD   = libresbase.a \
                  libbase.a
dumpfnt_SOURCES = Font.cc \
                  Font.h \
                  FontResource.cc \
                  FontResource.h \
                  dumpfnt.cc
dumpfnt_LDADD   = libresbase.a \
                  libdriver.a \
                  libbase.a
dumpgam_SOURCES = dumpgam.cc
dumpgam_LDADD   = libgame.a \
                  libguitoolkit.a \
                  libresdata.a \
                  libresbase.a \
                  libdriver.a \
                  libbase.a
dumplbl_SOURCES = LabelResource.cc \
                  LabelResource.h \
                  dumplbl.cc
dumplbl_LDADD   = libresbase.a \
                  libbase.a
dumpobj_SOURCES = ObjectResource.cc \
                  ObjectResource.h \
                  dumpobj.cc
dumpobj_LDADD   = libresbase.a \
                  libbase.a
dumppal_SOURCES = PaletteResource.cc \
                  PaletteResource.h \
                  dumppal.cc
dumppal_LDADD   = libguitoolkit.a \
                  libresbase.a \
                  libdriver.a \
                  libbase.a
dumpreq_SOURCES = RequestResource.cc \
                  RequestResource.h \
                  dumpreq.cc
dumpreq_LDADD   = libresbase.a \
                  libbase.a
dumpscx_SOURCES = Image.cc \
                  Image.h \
                  ScreenResource.cc \
                  ScreenResource.h \
                  dumpscx.cc
dumpscx_LDADD   = libresbase.a \
                  libdriver.a \
                  libbase.a
dumpsnd_SOURCES = Sound.cc \
                  Sound.h \
                  SoundResource.cc \
                  SoundResource.h \
                  dumpsnd.cc
dumpsnd_LDADD   = libresbase.a \
                  libbase.a
dumptbl_SOURCES = TableResource.cc \
                  TableResource.h \
                  dumptbl.cc
dumptbl_LDADD   = libresbase.a \
                  libbase.a
dumpttm_SOURCES = MovieResource.cc \
                  MovieResource.h \
                  dumpttm.cc
dumpttm_LDADD   = libresbase.a \
                  libbase.a
dumpwld_SOURCES = TileDataResource.cc \
                  TileDataResource.h \
                  TileWorldResource.cc \
                  TileWorldResource.h \
                  dumpwld.cc
dumpwld_LDADD   = libresbase.a \
                  libbase.a
resourcedemo_SOURCES = TestApplication.cc \
                       TestApplication.h \
                       resourcedemo.cc
resourcedemo_LDADD = libguitoolkit.a \
                     libresdata.a \
                     libresbase.a \
                     libdriver.a \
                     libbase.a
xbak_SOURCES = GameApplication.cc \
               GameApplication.h \
               GameState.cc \
               GameState.h \
               xbak.cc
xbak_LDADD = libgame.a \
             libguitoolkit.a \
             libresdata.a \
             libresbase.a \
             libdriver.a \
             libbase.a
