add_library(bakFile
    aggregateFileProvider.hpp aggregateFileProvider.cpp
    fileBuffer.hpp fileBuffer.cpp
    fileProvider.hpp fileProvider.cpp
    packedFileProvider.hpp packedFileProvider.cpp
    packedResourceFile.hpp packedResourceFile.cpp
    util.hpp util.cpp
    IDataBufferProvider.hpp
)
